--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "symfony/twig-bridge": "^3.2",
         "symfony/validator": "^3.2",
         "symfony/var-dumper": "^3.2",
-        "twig/twig": "^1.3"
+        "twig/twig": "^1.3",
+        "respect/validation": "*",
+        "defuse/php-encryption": "^2.0.3"
     }
 }
